# vocab-builder-agent

./: .env  .env.example  .gitignore  README.md  output.md  pyproject.toml
src/vocab_wizard/: __init__.py  vocab_wizard.py
